--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ h2{
     font-family: "Montserrat",sans-serif;
     font-size: 2.18rem;
     color:#66BFBF;
+    padding-bottom: 10px;
     }
 h3{
     font-family:"Montserrat",sans-serif; 
@@ -30,71 +31,74 @@ h3{
 }
 .middle-container{
     position: relative;
+    padding-top: 80px;
     padding-bottom: 120px;
     
 }
 .bottom-container{
     background-color: #66BFBF;
-    padding-top: 50px;
+    padding-top: 70px;
+    padding-bottom:40px;
     margin-bottom: 0;
     position: relative;
     text-align: center;
 }
 .bottom-cloud{
     position: absolute;
-    left:600px;
+    left:550px;
     bottom: 300px;
 
 }
 .top-cloud{
     position: absolute;
-    right:600px;
+    right:550px;
     top:50px;
     
 }
 .profilepict{
-    padding:30px;
     border-radius: 100%;
     height: 220px;
     
 }
 .skates{
     border-radius: 100%;
-    width: 25%;
+    width: 22%;
     float: left;
     margin-right: 30px;
 }
 .painting{
     border-radius: 100%;
-    width: 25%;
+    width: 22%;
     float: right;
     margin-left: 30px;
 }
 .guitar{
     border-radius: 100%;
-    width: 25%;
+    width: 22%;
     float: right;
     margin-left: 30px;
 }
 .programing{
     border-radius: 100%;
-    width: 25%;
+    width: 22%;
     float: left;
     margin-right: 30px;
 }
 a{
     color:#11999E ;
     text-decoration: none;
+    font-family: "Montserrat",sans-serif;
+
 }
 a:hover{
-    color:#252a34;
+    color:#EAF6F6;
     text-decoration:none;
 }
 .skill-row{
-    width: 55%;
+    width: 50%;
     margin:100px auto 100px auto;
     text-align: left;
-    line-height: 2;
+    padding-bottom: 20px;
     }
     hr{
         width: 5%;
@@ -102,25 +106,67 @@ a:hover{
         border-color: #EAF6F6;
         border-width: 10px;
         height:0px;
+        margin: 50px auto;
+        
     }
     .footer-link{
         line-height: 2;
-        padding-left: 40px;
         font-size: 20px;
+        margin:10px 20px;
+    }
+    .sklls{
+        padding:20px 0;
+    }
+    .profile{
+        padding-bottom: 10px ;
+    }
+    .intro{
+        width: 35%;
         text-align: center;
+        margin:auto;
     }
-    .btn{
-        background-color: #53B49F;
-        background-image: url(b2.png);
+    p{
+        line-height: 2;
+    }
+    .contact-msg{
+        width: 40%;
+        margin:40px auto 60px;
+    }
+    .btn {
+        background: #11CDD4;
+        background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
+        background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
+        background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
+        background-image: -o-linear-gradient(top, #11CDD4, #11999E);
+        background-image: linear-gradient(to bottom, #11CDD4, #11999E);
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
         border-radius: 10px;
-        position: relative;
-        padding:10px 20px 10px 20px;
+        color: #FFFFFF;
+        font-family: "Montserrat",sans-serif;
         font-size: 20px;
-        border-style: solid 10px;
-        border-color: #252a34;
         font-weight: bold;
-        box-shadow: 5px 5px 5px 0px;
-        text-shadow: 1px 5px 5px 10px;
+        padding: 10px 20px;
+        box-shadow: -2px 1px 5px 0px #11999E;
+        -webkit-box-shadow: -2px 1px 10px 0px #11999E;
+        -moz-box-shadow: -2px 1px 10px 0px #11999E;
+        text-shadow: 1px 1px 20px #EAF6F6;
+        text-decoration: none;
+        display: inline-block;
         cursor: pointer;
-        border:solid 1px #11999E;
-    }
+        text-align: center;
+        }
+        
+        .btn:hover {
+        
+        background: #30E3CB;
+        background-image: -webkit-linear-gradient(top, #30E3CB, #2BC4AD);
+        background-image: -moz-linear-gradient(top, #30E3CB, #2BC4AD);
+        background-image: -ms-linear-gradient(top, #30E3CB, #2BC4AD);
+        background-image: -o-linear-gradient(top, #30E3CB, #2BC4AD);
+        background-image: linear-gradient(to bottom, #30E3CB, #2BC4AD);
+        -webkit-border-radius: 9px;
+        -moz-border-radius: 9px;
+        border-radius: 9px;
+        text-decoration: none;
+        }
